--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -99,10 +99,10 @@
 
 @layer utilities {
   .section-container {
-    @apply container py-24 xl:py-32;
+    @apply container py-24;
   }
 
   .hero-container {
-    @apply container py-16 xl:py-24;
+    @apply container py-32 xl:py-24;
   }
 }
