--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -51,47 +51,11 @@
   }
 
   button {
-    @apply inline-flex items-center justify-center border border-transparent outline-none bg-transparent font-poppins text-inherit no-underline select-none transition touch-manipulation cursor-pointer;
+    @apply inline-flex items-center justify-center border-none outline-none bg-transparent font-poppins text-inherit no-underline select-none transition touch-manipulation cursor-pointer;
   }
 }
 
 @layer components {
-  .btn {
-    @apply text-center text-base font-medium rounded-lg px-5 py-2.5 focus:outline-none transition;
-  }
-
-  .btn-sharp {
-    @apply text-center text-base font-medium px-5 py-2.5 focus:outline-none transition;
-  }
-
-  .btn-xs {
-    @apply text-xs;
-  }
-
-  .btn-sm {
-    @apply text-sm;
-  }
-
-  .btn-primary {
-    @apply text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300;
-  }
-
-  .btn-primary-outline {
-    @apply text-green-700 hover:text-white border border-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300;
-  }
-
-  .btn-secondary {
-    @apply text-white bg-neutral-700 hover:bg-neutral-800 focus:ring-4 focus:ring-neutral-300;
-  }
-
-  .btn-secondary-outline {
-    @apply text-neutral-700 hover:text-white border border-neutral-700 hover:bg-neutral-800 focus:ring-4 focus:outline-none focus:ring-neutral-300;
-  }
-
-  .btn-danger {
-    @apply text-white bg-red-500 hover:bg-red-600 focus:ring-4 focus:ring-red-300;
-  }
-
   .tag {
     @apply border border-neutral-600 text-sm font-medium rounded-full py-1 px-3;
   }
