--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,6 +17,6 @@
 
 @layer components {
   .tag {
-    @apply border border-neutral-600 text-sm font-medium rounded-full py-1 px-3;
+    @apply border border-zinc-600 text-sm font-medium rounded-full py-1 px-3;
   }
 }
